--- a/configuration_liste.json
+++ b/configuration_liste.json
@@ -1,6 +1,6 @@
 {
     "type_liste": "proto-modr",
-    "nom_fichier": "   ESTEesunTEst0- yy --dsd--sjhj   ",
+    "nom_fichier": "test-liste-protomodr",
     "description": "Lista de prueba para el prototipo de moderación",
     "proprietaires": [
         "owner1@example.com",
